# GenericContainer

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml  coverage.yml
cmake/: GenericContainerConfig.cmake.in
examples/: example01.cc  example07.cc  example10.cc  test_all.cc
include/GenericContainer/: GenericContainer.hh  GenericContainerConfig.hh  GenericContainerInterface_nlohmann.hh  GenericContainer_ffi.h
interfaces/lua/: GenericContainerLuaPmain.cc
interfaces/toml/: CMakeLists.txt  to_toml.cc
interfaces/yaml/: CMakeLists.txt  to_yaml.cc
src/: GenericContainer.cc  GenericContainerCollapse.cc  GenericContainerInterface_C.cc  GenericContainerPromote.cc  GenericContainerSerialize.cc  GenericContainerSupport.cc  GenericContainerTables.cc  GenericContainer_ffi.cc
src_json_interface/: to_json.cc
src_lua_interface/: CMakeLists.txt  GenericContainerInterface_lua.cc
src_lua_interface/tests/: example_lua1.cc  example_lua2.cc  example_lua3.cc
src_matlab_interface/: Compile.m
src_toml_interface/: CMakeLists.txt  from_toml.cc
src_yaml_interface/: CMakeLists.txt  from_yaml.cc  to_yaml.cc
tests/: CMakeLists.txt  gc_test_utils.hh  test_c_interface.cc  test_collapse.cc  test_conversion_checks.cc  test_copy_move.cc  test_errors.cc  test_ffi.cc  test_json_yaml_toml.cc  test_map_vector_nesting.cc  test_matrix_types.cc  test_nlohmann_interface.cc  test_operators.cc  test_print_dump.cc  test_promotion.cc  test_promotion_matrix.cc  test_scalar_types.cc  test_serialization.cc  test_support.cc  test_tables.cc  test_vector_types.cc
